# Fast-API-CTO

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/data/: devices.json  users.json
alembic/versions/: ac2be9f0cd67_.py
api/: devices.py  users.py
api/utils/: devices.py  users.py
db/: db_setup.py
db/models/: device.py  user.py
pydantic_schemas/: device.py  user.py
