[tool.poetry]
name = "fast-api-part"
version = "0.1.0"
description = ""
authors = ["aymane"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.3"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
